Modified cmake file, added small improvement in RAPIDTracker.cpp and renamed input xml-file.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.7)
 
 project( RAPID )
 
 find_package( OpenCV REQUIRED )
-set(SOURCE RAPID.cpp Model.cpp)
+set(SOURCE RAPID.cpp Model.cpp RAPIDTracker.cpp)
 
 #SET(SOURCE_LIB Model.cpp)
 #add_library(Model STATIC ${SOURCE_LIB})
