Insignificant misc. corrections

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
-project( RAPID )
+project( RAPID C CXX)
 
 find_package( OpenCV REQUIRED )
+
 set(SOURCE RAPID.cpp Model.cpp RAPIDTracker.cpp VideoInfo.cpp)
-
-#SET(SOURCE_LIB Model.cpp)
-#add_library(Model STATIC ${SOURCE_LIB})
-
 add_executable(RAPID ${SOURCE})
 
-#target_link_libraries( RAPID Model)
 target_link_libraries( RAPID ${OpenCV_LIBS} )
