--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(gtest ${CMAKE_THREAD_LIBS_INIT})
 add_executable(
 	runUnitTests
     test.cpp
+    UtilTests.cpp
 )
 
 # For make-based builds defines make target named test.
@@ -49,7 +50,7 @@ add_executable(
 enable_testing()
 
 #Compile an executable that will run your unit tests and link it with gtest and gtest_main:
-target_link_libraries(runUnitTests gtest gtest_main ${OpenCV_LIBS})
+target_link_libraries(runUnitTests gtest gtest_main CORE_LIB ${OpenCV_LIBS})
 
 #Add a test which runs this executable (e.g., make test instruction)
 add_test(
